--- a/ios-dangerous-webview-practice/Info.plist
+++ b/ios-dangerous-webview-practice/Info.plist
@@ -61,6 +61,12 @@
 				<key>NSTemporaryExceptionRequiresForwardSecrecy</key><false/>
 				<key>NSTemporaryExceptionMinimumTLSVersion</key><string>TLSv1.0</string>
 			</dict>
+			<key>mail.metro.busan.kr</key>
+			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key><true/>
+				<key>NSTemporaryExceptionRequiresForwardSecrecy</key><false/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key><string>TLSv1.0</string>
+			</dict>
 		</dict>
 	</dict>
 </dict>
